--- a/ui/gist-selection/gist-selection.html
+++ b/ui/gist-selection/gist-selection.html
@@ -13,7 +13,7 @@
       crossorigin="anonymous"
     />
     <link
-      href="https://fonts.googleapis.com/css?family=Roboto:400"
+      href="https://fonts.googleapis.com/css?family=Roboto:400,700"
       rel="stylesheet"
     />
     <link
@@ -27,7 +27,7 @@
       <div class="container d-flex h-100">
         <div class="mx-auto text-center">
           <page-header></page-header>
-          <h3 class="mx-auto mt-2 mb-3 text-white-50">
+          <h3 class="mx-auto mt-2 mb-3 text-white-50a">
             Select Your Existing Gist
           </h3>
           <div id="selectionContainer" class="list-group mx-auto"></div>
