--- a/ui/settings/settings.html
+++ b/ui/settings/settings.html
@@ -13,7 +13,7 @@
       crossorigin="anonymous"
     />
     <link
-      href="https://fonts.googleapis.com/css?family=Roboto:400"
+      href="https://fonts.googleapis.com/css?family=Roboto:400,700"
       rel="stylesheet"
     />
     <link
@@ -35,18 +35,18 @@
           <page-header></page-header>
           <div class="row text-left">
             <div class="col mt-2 scrollable">
-              <h3 class="mx-auto mt-2 mb-3 text-white-50">
+              <h3 class="mx-auto mt-2 mb-3 text-white-50a text-center">
                 Environment Settings
               </h3>
               <form id="environmentSettings"></form>
               <p
                 id="saveStatus"
-                class="text-white-50"
+                class="text-white-50a"
                 style="font-size: 3rem"
               ></p>
             </div>
             <div class="col mt-2 scrollable">
-              <h3 class="mx-auto mt-2 mb-3 text-white-50">
+              <h3 class="mx-auto mt-2 mb-3 text-white-50a text-center">
                 Global Settings
               </h3>
               <form id="globalSettings"></form>
