Add image locally and move it to the top

--- a/ui/landing-page/landing-page.html
+++ b/ui/landing-page/landing-page.html
@@ -20,6 +20,9 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans:700"
       rel="stylesheet"
     />
+    <script>
+      const pwd = `@PWD`;
+    </script>
     <link rel="stylesheet" href="@PWD/ui/shared/styles.css" />
   </head>
   <body>
@@ -106,7 +109,6 @@
                     </div>
                   </div>
                 </div>
-
                 <div class="text-left mt-2">
                   <a
                     href="https://marketplace.visualstudio.com/items?itemName=Shan.code-settings-sync&ssr=false#review-details"
