--- a/ui/landing-page/landing-page.html
+++ b/ui/landing-page/landing-page.html
@@ -25,7 +25,7 @@
     </script>
     <link rel="stylesheet" href="@PWD/ui/shared/styles.css" />
   </head>
-  <body class="container d-flex h-100 mx-auto text-center">
+  <body class="container d-flex h-100 mx-auto my-8 text-center">
     <page-header></page-header>
     <div class="row content-row">
       <div class="col text-left mt-2 scrollable" id="notes">
@@ -118,31 +118,28 @@
         </div>
       </div>
     </div>
-    <div class="footer row text-left">
+    <footer class="footer row text-left">
       <div class="col">
-        <div class="mb-2 mt-2">
-          <h3 class="mx-auto mb-3 text-white-50a">
-            Need Help?
-          </h3>
-          <a href="https://shanalikhan.github.io/">Homepage</a><br />
-          <a href="https://github.com/shanalikhan/code-settings-sync/issues"
-            >Questions & Issues</a
-          ><br />
-        </div>
+        <h3 class="mx-auto mb-3 text-white-50a">
+          Need Help?
+        </h3>
+        <a href="https://shanalikhan.github.io/">Homepage</a><br />
+        <a href="https://github.com/shanalikhan/code-settings-sync/issues"
+          >Questions & Issues</a
+        >
+        <br />
       </div>
       <div class="col">
-        <div class="mb-2 mt-2">
-          <h3 class="mx-auto mb-3 text-white-50a">
-            Sponsors
-          </h3>
-          <p class="mx-auto mt-2 mb-3 text-white-50a">
-            Settings Sync is looking for sponsors to display here. Contact me on
-            <a href="https://twitter.com/itsShanKhan">Twitter</a> or
-            <a href="https://github.com/shanalikhan">GitHub</a>
-          </p>
-        </div>
+        <h3 class="mx-auto mb-3 text-white-50a">
+          Sponsors
+        </h3>
+        <p class="mx-auto mt-2 mb-3 text-white-50a">
+          Settings Sync is looking for sponsors to display here. Contact me on
+          <a href="https://twitter.com/itsShanKhan">Twitter</a> or
+          <a href="https://github.com/shanalikhan">GitHub</a>
+        </p>
       </div>
-    </div>
+    </footer>
     <script
       defer
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
