--- a/ui/settings/settings.html
+++ b/ui/settings/settings.html
@@ -31,7 +31,7 @@
     </script>
     <link rel="stylesheet" href="@PWD/ui/shared/styles.css" />
   </head>
-  <body class="container d-flex h-100 mx-auto text-center">
+  <body class="container d-flex h-100 m-auto text-center">
     <page-header></page-header>
     <div class="row content-row text-left">
       <div class="col mt-2 scrollable">
