Fix issues with contrast

--- a/ui/landing-page/landing-page.html
+++ b/ui/landing-page/landing-page.html
@@ -24,6 +24,11 @@
       const pwd = `@PWD`;
     </script>
     <link rel="stylesheet" href="@PWD/ui/shared/styles.css" />
+    <style>
+      body {
+        background-color: var(--vscode-editor-background);
+      }
+    </style>
   </head>
   <body class="container d-flex h-100 mx-auto my-8 text-center">
     <page-header></page-header>
