--- a/ui/gist-selection/gist-selection.html
+++ b/ui/gist-selection/gist-selection.html
@@ -24,6 +24,11 @@
       const pwd = `@PWD`;
     </script>
     <link rel="stylesheet" href="@PWD/ui/shared/styles.css" />
+    <style>
+      body {
+        background-color: var(--vscode-editor-background);
+      }
+    </style>
   </head>
   <body class="container d-flex h-100">
     <div class="mx-auto text-center">
