--- a/ui/settings/settings.html
+++ b/ui/settings/settings.html
@@ -30,8 +30,13 @@
       const pwd = "@PWD";
     </script>
     <link rel="stylesheet" href="@PWD/ui/shared/styles.css" />
+    <style>
+      body {
+        background-color: var(--vscode-editor-background);
+      }
+    </style>
   </head>
-  <body class="container d-flex h-100 m-auto text-center">
+  <body class="container d-flex h-100 mx-auto text-center">
     <page-header></page-header>
     <div class="row content-row text-left">
       <div class="col mt-2 scrollable">
