Fix issues with theme on modal

--- a/ui/gist-selection/gist-selection.html
+++ b/ui/gist-selection/gist-selection.html
@@ -49,7 +49,7 @@
       aria-hidden="true"
     >
       <div class="modal-dialog modal-dialog-centered" role="document">
-        <div class="modal-content bg-dark">
+        <div class="modal-content">
           <div class="modal-header">
             <h5 class="modal-title" id="exampleModalCenterTitle">
               Saved Gist ID!
