Add button to download public gist

--- a/ui/landing-page/landing-page.html
+++ b/ui/landing-page/landing-page.html
@@ -71,6 +71,14 @@
               </div>
             </div>
           </div>
+          <div class="text-left my-2">
+            <a
+              href="#"
+              onclick="sendCommand('downloadPublicGist')"
+              title="Download Public Gist"
+              >Download Public Gist</a
+            >
+          </div>
         </div>
         <div>
           <h3 class="mx-auto mb-3 text-white-50a text-left">
