Add button to not show page

--- a/ui/landing-page/landing-page.html
+++ b/ui/landing-page/landing-page.html
@@ -120,6 +120,12 @@
             ><br />
             <a href="https://twitter.com/itsShanKhan">Follow me on Twitter</a
             ><br />
+            <a
+              href="#"
+              onclick="sendCommand('dontShowThisAgain')"
+              title="Don't show this again"
+              >Don't show this again</a
+            ><br />
           </div>
         </div>
       </div>
