--- a/ui/landing-page/landing-page.html
+++ b/ui/landing-page/landing-page.html
@@ -134,11 +134,15 @@
           >Questions & Issues</a
         >
         <br />
+        <a href="https://github.com/shanalikhan/code-settings-sync/blob/master/CONTRIBUTING.md"
+          >Contribute</a
+        >
+        <br />
       </div>
       <div class="col col-two">
         <h3 class="mb-3">Sponsors</h3>
         <p class="mx-auto mt-2 mb-3 text-white-50a">
-          Settings Sync is looking for sponsors to display here. Contact me on
+          Contact me on
           <a href="https://twitter.com/itsShanKhan">Twitter</a> or
           <a href="https://github.com/shanalikhan">GitHub</a>
         </p>
