Fix GitHub spelling

--- a/ui/landing-page/landing-page.html
+++ b/ui/landing-page/landing-page.html
@@ -116,7 +116,7 @@
               >Write a Review</a
             ><br />
             <a href="https://github.com/shanalikhan/code-settings-sync"
-              >Star or Fork Settings Sync on Github</a
+              >Star or Fork Settings Sync on GitHub</a
             ><br />
             <a href="https://twitter.com/itsShanKhan">Follow me on Twitter</a
             ><br />
