--- a/ui/landing-page/landing-page.html
+++ b/ui/landing-page/landing-page.html
@@ -6,6 +6,10 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="default-src 'unsafe-inline' vscode-resource: data:;"
+    />
     <link
       rel="stylesheet"
       href="@PWD/ui/shared/vendor/bootstrap/css/bootstrap.min.css"
