--- a/ui/landing-page/landing-page.html
+++ b/ui/landing-page/landing-page.html
@@ -8,7 +8,7 @@
     />
     <meta
       http-equiv="Content-Security-Policy"
-      content="default-src 'unsafe-inline' vscode-resource: data:;"
+      content="default-src vscode-resource:; script-src 'unsafe-inline' vscode-resource:; style-src 'unsafe-inline' vscode-resource:; img-src data: vscode-resource:;"
     />
     <link
       rel="stylesheet"
