Setting up scroll bars #1083

--- a/ui/landing-page/landing-page.html
+++ b/ui/landing-page/landing-page.html
@@ -30,7 +30,7 @@
   <body class="container d-flex h-100 mx-auto my-8 text-center">
     <page-header></page-header>
     <div class="row content-row">
-      <div class="col text-left mt-2 scrollable" id="notes">
+      <div class="col text-left mt-2 scrollable" style="height: 100%;" id="notes">
         <h3 class="mx-auto pt-2 pb-4 text-white-50a text-center">
           What's New in
           <b>
@@ -42,7 +42,7 @@
           </b>
         </h3>
       </div>
-      <div class="col mt-2 scrollable">
+      <div class="col mt-2 scrollable" style="height: 100%;">
         <div>
           <h3 class="mx-auto mt-2 text-white-50a text-left">
             Configuration
