- Configurations Updated to support more export methods - UI Scroll bar issue fixed

--- a/ui/settings/settings.html
+++ b/ui/settings/settings.html
@@ -30,14 +30,14 @@
   <body class="container d-flex h-100 mx-auto text-center">
     <page-header></page-header>
     <div class="row content-row text-left">
-      <div class="col mt-2 scrollable">
+      <div class="col mt-2 scrollable" style="height: 100%;">
         <h3 class="mx-auto mt-2 text-white-50a text-center">
           Environment Settings
         </h3>
         <form id="environmentSettings"></form>
         <p id="saveStatus" class="text-white-50a" style="font-size: 3rem"></p>
       </div>
-      <div class="col mt-2 scrollable">
+      <div class="col mt-2 scrollable"  style="height: 100%;">
         <h3 class="mx-auto mt-2 text-white-50a text-center">
           Global Settings
         </h3>
